force-app/main/default/objects/SIS_Skills_Family__c/SIS_Skills_Family__c.object-meta.xml
<CustomObject>
    <label>Famille de compétences</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Familles de compétences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>