force-app/main/default/objects/SIS_Skills_Family__c/fields/SIS_Description_EN__c.field-meta.xml
<CustomField>
    <fullName>SIS_Description_EN__c</fullName>
    <label>Description EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>