force-app/main/default/objects/SIS_Skills_Family__c/fields/SIS_Description_FR__c.field-meta.xml
<CustomField>
    <fullName>SIS_Description_FR__c</fullName>
    <label>Description FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>