force-app/main/default/objects/SIS_Skills_Family__c/fields/SIS_Skills_Family_Type__c.field-meta.xml
<CustomField>
    <fullName>SIS_Skills_Family_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RNCP</fullName>
            </value>
            <value>
                <fullName>Learning Goal</fullName>
            </value>
            <value>
                <fullName>EarlyMakers</fullName>
            </value>
            <value>
                <fullName>SDGs Sustainable Development Goals</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>