force-app/main/default/objects/SIS_Skills_Family__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SIS_Skills_Family_Type__c</columns>
    <columns>SIS_Description_FR__c</columns>
    <columns>SIS_Description_EN__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les familles de compétence</label>
</ListView>