force-app/main/default/objects/SIS_Skills_Family__c/listViews/Tous_les_blocs_RNCP.listView-meta.xml
<ListView>
    <fullName>Tous_les_blocs_RNCP</fullName>
    <columns>NAME</columns>
    <columns>SIS_Skills_Family_Type__c</columns>
    <columns>SIS_Description_FR__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SIS_Skills_Family_Type__c</field>
        <operation>equals</operation>
        <value>RNCP</value>
    </filters>
    <label>Tous les blocs RNCP</label>
</ListView>